TestSuite/errors/err0162.pas
procedure Test;
var a : integer;
begin
var a : integer;
end;

begin

end.